--- a/index.html
+++ b/index.html
@@ -1,12 +1,20 @@
-<html>
+<!doctype html>
+<html lang="en">
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport"
+        content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Тестовое задание: Михаил Головешкин</title>
   <script src="https://unpkg.com/vis-timeline@latest/standalone/umd/vis-timeline-graph2d.min.js"></script>
+  <script src="https://cesium.com/downloads/cesiumjs/releases/1.108/Build/Cesium/Cesium.js"></script>
+  <link href="https://cesium.com/downloads/cesiumjs/releases/1.108/Build/Cesium/Widgets/widgets.css" rel="stylesheet">
   <link rel="stylesheet" href="./styles/style.css">
 </head>
 <body>
-<div id="visualization"></div>
-
-<script type="module" src="./scripts/timeline.js"></script>
+  <div id="visualization"></div>
+  <div id="cesiumContainer"></div>
+  <script type="module" src="./scripts/timeline.js"></script>
+  <script type="module" src="./scripts/3dModel.js"></script>
 </body>
 </html>
