feat: навигация, логика отрисовки блоков, refactor: функция конвертации времени вынесена в отдельную утилиту, переименованы скрипты с использованием библиотек

--- a/index.html
+++ b/index.html
@@ -12,9 +12,12 @@
   <link rel="stylesheet" href="./styles/style.css">
 </head>
 <body>
+  <nav>
+    <button id="visualizationButton">Visualization</button>
+    <button id="cesiumButton">Cesium</button>
+  </nav>
   <div id="visualization"></div>
   <div id="cesiumContainer"></div>
-  <script type="module" src="./scripts/timeline.js"></script>
-  <script type="module" src="./scripts/3dModel.js"></script>
+  <script type="module" src="./scripts/index.js"></script>
 </body>
 </html>
