feat: стилизация кнопок

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
   <link rel="stylesheet" href="./styles/style.css">
 </head>
 <body>
-  <nav>
-    <button id="visualizationButton">Visualization</button>
-    <button id="cesiumButton">Cesium</button>
+  <nav class="navigation">
+    <button id="visualizationButton" class="navigation__button">План-график</button>
+    <button id="cesiumButton" class="navigation__button">Зd-модель</button>
   </nav>
   <div id="visualization"></div>
   <div id="cesiumContainer"></div>
